<resources>
    <string name="app_name">AcoStop</string>
    <string name="intro">AcoStop te puede ayudar a evaluar si sufres de violencia en tu relación amorosa. Ayúdate a ti misma/o y detecta a tiempo si en tu relación existe acoso o si tu pareja tiende a la agresión.</string>
    <string name="iniciar_test">Iniciar test</string>
    <string name="test_intro">El siguiente test fué diseñado por el Instituto Politécnico Nacional para detectar los niveles de violencia a los que podrías estar sometida/o. Responde en un lugar tranquilo y sin interrupciones. Puedes tomar el cuestionario tantas veces como lo desees y tu resultado no será compartido con nadie.</string>
    <string name="test_bromas">Tu pareja ha hecho o hace bromas hirientes que resultaron en golpes, caídas, resbalones o simplemente hace bromas que consideras crueles.</string>
    <string name="test_chantaje">Tu pareja te chantajea o lo ha hecho alguna vez.</string>
    <string name="test_mentiras">Tu pareja te miente o sientes que oculta cosas cuando el/ella jura decirte toda la verdad. Te ha ocultado deudas o circunstancias que afectan a ambos.</string>
    <string name="test_hielo">Después de algun disgusto, tu pareja te ignora o simplemente usa la \"ley del hielo\" como castigo a ti.</string>
    <string name="test_celos">Tu pareja te cela mucho o le dan celos cuando socializas o hablas con alguien más.</string>
    <string name="test_culpabilizar">Tu pareja te ha culpado o te culpa de cosas que son su responsabilidad. Te culpa porque algo desafortunado le ocurrió incluso cuando no había nada que pudieras hacer.</string>
    <string name="test_descalificar">Tu pareja no confía en tus habilidades. Te ha dicho que te quites y que sólamente el/ella lo sabe hacer bien.</string>
    <string name="test_ridiculizar">Tu pareja se ha burlado de ti o simplemente te ofende de cualquier manera.</string>
    <string name="test_humillar">Tu pareja te humilla en público. Te usa y te juega bromas pesadas o te ofende para hacer reir a sus amistades.</string>
    <string name="test_intimidar">Tu pareja te ha amenazado de cualquier manera o te ha intimidado sin llegar a lastimarte fisicamente. (Amenaza con golpearte pero no te golpea).</string>
    <string name="test_controlar">Tu pareja te ha prohibido frecuentarte con tus amistades, familiares o personas con quienes compartiste un amorío o una infidelidad. Controla cómo te debes de vestir o le tienes que pedir permiso para salir o usar tu celular. Usa de excusa que le haz sido infiel y no confía en ti.</string>
    <string name="test_destruir">Tu pareja ha destruido articulos personales como recuerdos, fotografías, perfumes o regalos o simplemente han desaparecido sin explicación. No importa si los artículos son regalos de algun/a pretendiente o persona con quien compartiste un amorío.</string>
    <string name="test_manosear">Tu pareja te manosea o te toca cuando estas cambiandote de ropa o cuando te bañas. Incluso lo hace cuando le pides que no lo haga o que no deseas que te toque.</string>
    <string name="test_caricias_agresivas">Tu pareja te ha acariciado de manera agresiva. Utilizando más fuerza de la que te gustaría. Te hace sentir incomoda/o cuando lo hace de esa manera.</string>
    <string name="test_golpear_jugando">Tu pareja te ha golpeado \"jugando\". Te ha dado una nalgada demasiado fuerte o despues de golpearte te ha dicho que sólamente es de juego.</string>
    <string name="test_pellizcar_aranar">Tu pareja te pellizca o araña. Incluso cuando no te deja marca o no te duele tanto.</string>
    <string name="test_empujar_jalonear">Tu pareja te ha llegado a empujar. Usa su fuerza para bloquear tu camino o cuando discuten te jalonea del brazo para que no te vayas o lo hace para que permanezcas en algun sitio.</string>
    <string name="test_cachetear">Tu pareja ya te ha cacheteado o abofeteado. No importa si no lo hizo con toda su fuerza.</string>
    <string name="test_patear">Tu pareja te ha pateado. Incluso si no ha sido con fuerza pero ha utilizado sus piernas para golpearte o empujarte.</string>
    <string name="test_encerrar">Tu pareja te ha encerrado en un cuarto o le pone llave a la casa para que no salgas. Te ha llegado a encerrar aun cuando le has pedido que te deje salir. Le tienes que pedir permiso para abandonar la casa o el cuarto aunque sea por un momento.</string>
    <string name="test_amenazar_objetos">Tu pareja te ha amenazado con lastimarte o matarte con un objeto o arma.</string>
    <string name="test_amenazar_muerte">Tu pareja ha amenazado con matarte o ha sugerido que hará que desaparezcas para siempre.</string>
    <string name="test_forzar_relacion">Tu pareja te ha obligado o forzado a tener relaciones sexuales con el o ella incluso cuando no quieres.</string>
    <string name="test_abuso_sexual">Tu pareja abusa sexualmente de ti. Te hace tener relaciones siendo menor de edad. No entiendes aún lo que sucede en una relación sexual y se aprovecha de ello.</string>
    <string name="test_violacion">Tu pareja ha tenido relaciones sexuales contigo o te ha tocado en tus partes intimas con violencia. Lo ha hecho mientras te encuentras ebrio/a o inconciente por alguna droga. Tu pareja te hace tomar drogas para estimular la relación sexual.</string>
    <string name="test_mutilar">Tu pareja te ha mutilado intencionalmente. Te ha cortado o te ha lastimado alguna parte de tu cuerpo por que dice que \"le perteneces\". Te ha dejado cicatrices para que \"nadie te quiera por fea/o\".</string>
    <string name="test_asesinar">Tu pareja ha intentado asesinarte o has descubierto que lo intentará. Sospechas que planea matarte.</string>
    <string name="resultado">Tus resultados:</string>
    <string name="nivel_violencia">Nivel de violencia:</string>
    <string name="results_excellent">Felicidades. Si no has marcado ninguna de las casillas quiere decir que no sufres de ningun tipo de violencia en tu relación. Sin embargo, si crees que has sido muy flexible o si crees que has mentido en tus respuestas, vuelve a tomar el cuestionario cuando estes lista/o.</string>
    <string name="buscar_ayuda">Buscar ayuda</string>
    <string name="app_description">AcoStop es una aplicación gratuita que recolecta información disponible en Internet a través de diferentes instancias gubernamentales y asociaciones sin fines de lucro. Su función es meramente la de informar y los resultados que muestra no deberían considerarse como exámenes médicos o psicológicos. Si te sientes inseguro/a o sufres de cualquier tipo de violencia por parte de tu pareja sentimental o sexual, no dudes en buscar ayuda inmediatamente.</string>
    <string name="test_violencia_relacion">Test: \"Violencia en la Relación\"</string>
    <string name="info_acoso_general">Info: Acoso Sexual. Lo conoces?</string>
    <string name="intro_acoso">Algunas conductas que constituyen el acoso sexual son las siguientes:</string>
    <string name="acoso_uno">1. Que te chiflen o silben. Que te hagan señales lascivas (sexuales, como imitar el movimiento de la masturbación), miradas directamente a tu cuerpo y tus partes íntimas o que te hagan muecas o gestos que sugieran actos o pensamientos sexuales.</string>
    <string name="acoso_dos">2. Que te cuenten chistes sexuales que sin importar el contenido te hagan sentir incómodo/a. Comentarios que insinuen el acto sexual o con groserías. Que adulen tu físico con insinuaciones sexuales, sin importar la vestimenta que elijas.</string>
    <string name="acoso_tres">3. Que te hagan preguntas sobre tu vida sexual o sobre tu intimidad. Así como también que hagan referencia a tu vida sexual o que por medio de algún comentario traten de adivinar tus gustos y preferencias sexuales, así como también tus actividade sexuales.</string>
    <string name="acoso_cuatro">4. Que te propongan tener relaciones sexuales o que te presionen de cualquier manera para tener relaciones sexuales.</string>
    <string name="acoso_cinco">5. Que tu ex-novio/a o ex-pareja te chantajee o amenace para regresar a la situación sentimental o sexual que alguna vez tuvieron. Sin importar el tiempo que pasó desde que terminaron la relación. (Un ejemplo de chantaje sería revelar fotografías tuyas en caso de que te negaras a regresar o que te amenacen con quitarte la custodia de tus hijos).</string>
    <string name="acoso_seis">6. Realizar llamadas telefónicas o enviar mensajes de texto con insinuaciones sexuales. Que te manden fotografías de él o ella desnudo/a o mostrando partes íntimas. Que te pidan fotografías tuyas desnudo/a.</string>
    <string name="acoso_siete">7. Que visiten insistentemente tus redes sociales y generen comentarios con insinuaciones sexuales.</string>
    <string name="acoso_ocho">8. Insistir en tener encuentros fuera del lugar de trabajo o de convivencia. Aún cuando le haz dicho que no deseas reunirte con la persona.</string>
    <string name="acoso_nueve">9. Que se te acerquen de manera excesiva, que sin tu permiso te abracen o te den besos (incluso cuando no son en la boca). Que aprovechen largas cantidades de gente para tocarte (arrimones). Que te rocen con algun objeto o parte de su cuerpo cuando hay espacio suficiente para evitarlo. Que te acorralen en un espacio cerrado y sea imposible salir de ahí sin producir un roce o que se tengan que tocar.</string>
    <string name="acoso_diez">10. Que te enseñen fotos, imagenes o videos o cualquier objeto con insinuaciones sexuales. (Por ejemplo un video pornográfico, un pene de juguete o una prenda íntima).</string>
    <string name="acoso_once">11. Que te miren con clara intención de crear pensamientos sexuales o con insinuaciones sexuales. (Como mirarte y despues hacer una seña erótica o esperar a que lo/la mires para que él/ella se mire sus partes íntimas).</string>
    <string name="acoso_que_pasa_mi_pareja">¿Qué pasa si mi pareja realiza alguno de estos actos conmigo y me gusta?</string>
    <string name="acoso_consejo_pareja">Es muy importante que sepas que los actos que se mencionan aquí constituyen faltas graves y podrían ser consideradas como acoso sexual cuando estan hechas por personas con quienes no compartes intimidad sexual como: Amigos y colegas del trabajo, profesores, compañeros/as, compañeros de viaje, etc. Cuando alguna de estas acciones es realizada por tu pareja sentimental y/o sexual, es muy importante que seas tú quien decide lo que sí se permitirá como parte de una relación saludable o lo que te incomoda, ya que incluso dentro de una relación, los actos mencionados pueden constituir acoso sexual.</string>
    <string name="info_hostigamiento">Info: El hostigamiento vs acoso sexual.</string>
    <string name="info_facebook">Visita nuestra página en Facebook</string>
    <string name="calcular">Calcular</string>
    <string name="q_acoso">Procedimiento para presentar una denuncia por acoso sexual.</string>
    <string name="procedimiento_acoso_intro">Si has sido víctima de acoso o violencia sexual, puedes presentar una denuncia. Sigue el manual del procedimiento de quejas por acoso sexual.</string>
    <string name="paso_1_intro">1. Empieza por identificar tu queja.</string>
    <string name="paso_1_desc">Tu queja la puedes presentar de manera verbal, escrita o por cualquier medio electrónico a la Direccion de Orientación Ciudadana y de Derechos Humanos y los eventos que quieras denuniar no podrán tener mas de un año de haber sucedido.</string>
    <string name="recuerda_ratificar">Una vez presentada, tienes tres días para presentarte en Rio de la Plata # 48, Piso 13, Col. Cuauhtémoc C.P. 06500, Del. Cuauhtémoc, en la Ciudad de México. Cerca de Metro Chapultepec o Sevilla para ratificar tu denuncia.</string>
    <string name="ir_al_sitio_web">Ir al sitio web</string>
</resources>