<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oom.pocket.acostop.TestActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_intro"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-2236350735048598/1813503450"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_bromas"
            android:text="@string/test_bromas"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_chantaje"
            android:text="@string/test_chantaje"/>
        <CheckBox
            android:layout_width="match_parent"

            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/test_mentiras"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_hielo"
            android:layout_height="wrap_content"
            android:text="@string/test_hielo"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/_pt1_celos"
            android:text="@string/test_celos"/>
        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/_pt1_culpabilizar"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/test_culpabilizar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_descalificar"
            android:layout_height="wrap_content"
            android:text="@string/test_descalificar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_ridiculizar"
            android:layout_height="wrap_content"
            android:text="@string/test_ridiculizar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/_pt1_humillar"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/test_humillar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_intimidar"
            android:text="@string/test_intimidar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt1_controlar"
            android:text="@string/test_controlar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/_pt2_destruir"
            android:text="@string/test_destruir"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt2_manosear"
            android:layout_height="wrap_content"
            android:text="@string/test_manosear"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt2_caricias_agresivas"
            android:layout_height="wrap_content"
            android:text="@string/test_caricias_agresivas"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt2_golpear_jugando"
            android:layout_height="wrap_content"
            android:text="@string/test_golpear_jugando"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/_pt2_pellizcar"
            android:layout_marginBottom="8dp"
            android:text="@string/test_pellizcar_aranar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/_pt2_empujar"
            android:text="@string/test_empujar_jalonear"/>
        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/_pt2_cachetear"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/test_cachetear"/>
        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/_pt2_patear"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/test_patear"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/_pt2_encerrado"
            android:text="@string/test_encerrar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:id="@+id/_pt3_amenazar_objetos"
            android:text="@string/test_amenazar_objetos"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"

            android:id="@+id/_pt3_amenazar_muerte"
            android:layout_height="wrap_content"
            android:text="@string/test_amenazar_muerte"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:id="@+id/_pt3_forzar_relacion"
            android:text="@string/test_forzar_relacion"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"

            android:layout_height="wrap_content"
            android:id="@+id/_pt3_abuso_sexual"
            android:text="@string/test_abuso_sexual"/>
        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/_pt3_violacion"
            android:layout_marginBottom="8dp"

            android:layout_height="wrap_content"
            android:text="@string/test_violacion"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:id="@+id/_pt3_mutilar"
            android:text="@string/test_mutilar"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"

            android:id="@+id/_pt3_asesinar"
            android:layout_height="wrap_content"
            android:text="@string/test_asesinar"/>

        <TextView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel_violencia"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:max="28"
            android:progress="0"/>

        <TextView
            android:text="@string/results_excellent"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/tv_results"/>

        <Button
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_calculate"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:background="@drawable/selector_button"
            android:text="@string/calcular"/>

    </LinearLayout>



</ScrollView>
